--- a/css/style.css
+++ b/css/style.css
@@ -36,7 +36,7 @@ body, html{
 
 /* Background Image Styles */
 
-.home-bg, .services-bg, .projects-bg{
+.home-bg, .first-bg, .second-bg{
     position: relative;
     background-position: center;
     background-size: cover;
@@ -56,12 +56,12 @@ body, html{
     min-height: 100%;
 }
 
-.services-bg{
-    background-image: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)),url(../images/silver-and-black-laptop-computer-1229861.jpg);
+.first-bg{
+    background-image: linear-gradient(rgba(0,0,0,0.2),rgba(0,0,0,0.2)),url(../images/silver-and-black-laptop-computer-1229861.jpg);
     min-height: 500px;
 }
 
-.projects-bg{
+.second-bg{
     background-image: linear-gradient(rgba(0,0,0,0.1),rgba(0,0,0,0.1)),url(../images/background.jpg);
     min-height: 500px;
 }
@@ -127,7 +127,7 @@ body, html{
 /* Services */
 
 #services .service{
-    color: white;
+    color: black;
     margin-top: 2rem;
     padding: 3rem;
 }
@@ -174,6 +174,7 @@ body, html{
     height: auto;
     margin-top: -25%;
 }
+
 
 .retouch-img{
     display: inline-block;
