Retouch service removed

--- a/css/style.css
+++ b/css/style.css
@@ -34,6 +34,17 @@ body{
 }
 
 
+.navbar-brand{
+    font-size: x-large !important;
+}
+
+.nav-item a{
+    margin-left: 0.7rem;
+    letter-spacing: 0.1rem;
+    text-transform: uppercase;
+}
+
+
 /* Background Image Styles */
 
 .home-bg, .first-bg, .second-bg{
@@ -68,16 +79,6 @@ body{
 
 
 /* Content Styles */
-
-.navbar-brand{
-    font-size: x-large !important;
-}
-
-.nav-item a{
-    margin-left: 0.7rem;
-    letter-spacing: 0.1rem;
-    text-transform: uppercase;
-}
 
 .section-content{
     color: white;
@@ -122,13 +123,13 @@ body{
 #services .service{
 
     color: black;
-    margin-top: 2rem;
-    padding: 3rem;
+    margin-top: 2rem ;
+    margin-bottom: 2rem;
 }
 
 .service h3{
     margin-bottom: 2rem;
-    margin-left: 2.5rem;
+    margin-left: 1rem;
     white-space: nowrap;
 }
 
@@ -138,8 +139,8 @@ body{
 .service .circular-landscape{
     display: inline-block;
     position: relative;
-    width: 250px;
-    height: 250px;
+    width: 200px;
+    height: 200px;
     overflow: hidden;
     border-radius: 50%;
     border: white 0.5rem solid;
@@ -156,8 +157,8 @@ body{
 .service .circular-portrait{
     display: inline-block;
     position: relative;
-    width: 250px;
-    height: 250px;
+    width: 200px;
+    height: 200px;
     overflow: hidden;
     border-radius: 50%;
     border: white 0.5rem solid;
@@ -167,39 +168,6 @@ body{
     width: 100%;
     height: auto;
     margin-top: -25%;
-}
-
-
-.retouch-img{
-    display: inline-block;
-    position: relative;
-    width: 250px;
-    height: 250px;
-    overflow: hidden;
-    border-radius: 50%;
-    border: white 0.5rem solid;
-}
-
-.retouch-img img{
-    width: 100%;
-    height: auto;
-}
-
-
-/* Services Button Styles */
-
-.service .btn{
-    margin-left: 4rem;
-    margin-top: 1rem;
-    background-color: rgb(75, 214, 75);
-    font-weight: 600;
-}
-
-.service .btn:hover{
-    margin-left: 4rem;
-    margin-top: 1rem;
-    background-color: rgb(37, 107, 37);
-    font-weight: 600;
 }
 
 
@@ -250,6 +218,9 @@ body{
     text-align: center;
     padding: 3rem 0rem;
 }
+.contact-section h3{
+    padding-bottom: 1rem;
+}
 
 .full-name{
     padding-bottom: 1rem;
@@ -257,4 +228,32 @@ body{
 
 .contact-detail{
     padding-bottom: 1.5rem;
+}
+
+#contact .btn{
+    background-color: lime;
+    border-color: lime;
+    padding: 0rem 2rem;
+}
+
+#contact .btn:hover{
+    background-color: limegreen;
+    border-color: limegreen;
+    padding: 0rem 2rem;
+}
+
+#contact .fab{
+    color: limegreen;
+}
+
+#contact .fab:hover{
+    color: lime;
+}
+
+/* Footer Styles */
+
+.footercontainer{
+    color: white;
+    background-color: rgb(15, 11, 11);
+    text-align: center;
 }
