--- a/css/style.css
+++ b/css/style.css
@@ -45,6 +45,27 @@ body{
 }
 
 
+
+/* CSS for Hide Nav on scroll */
+.smart-scroll{
+    position: fixed;
+    top: 0;
+    right: 0;
+    left: 0;
+    z-index: 1030;
+  }
+  .scrolled-down{
+     transform:translateY(-100%); transition: all 0.3s ease-in-out;
+  }
+  .scrolled-up{
+     transform:translateY(0); transition: all 0.3s ease-in-out;
+  }
+
+
+
+
+
+
 /* Background Image Styles */
 
 .home-bg, .first-bg, .second-bg, .third-bg{
